--- a/ui/projectEditor.ui
+++ b/ui/projectEditor.ui
@@ -18,6 +18,9 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
+       <widget class="QComboBox" name="projectsCombo"/>
+      </item>
+      <item>
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Placeholder</string>
@@ -27,7 +30,7 @@
      </layout>
     </item>
     <item>
-     <widget class="QTableView" name="tableView"/>
+     <widget class="QTableView" name="cutlistView"/>
     </item>
    </layout>
   </widget>
